--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="/media_query.css">
+    <link rel="stylesheet" href="/auth.css">
     <title>Ecommerce Laptop App</title>
 </head>
 
